--- a/public/assets/pug/components/footer.pug
+++ b/public/assets/pug/components/footer.pug
@@ -4,7 +4,7 @@ if footer_dark
        .container-fluid
             .row
                 .col-md-12.footer-copyright.text-center
-                    p.mb-0 Copyright 2022 © Cuba theme by pixelstrap                  
+                    p.mb-0 Copyright 2024                 
                     
 
 else if footer_fix
@@ -12,12 +12,12 @@ else if footer_fix
        .container-fluid
             .row
                 .col-md-12.footer-copyright.text-center
-                    p.mb-0 Copyright 2022 © Cuba theme by pixelstrap  
+                    p.mb-0 Copyright 2024 
 
 else
   footer.footer
        .container-fluid
             .row
                 .col-md-12.footer-copyright.text-center
-                    p.mb-0 Copyright 2022 © Cuba theme by pixelstrap  
+                    p.mb-0 Copyright 2024 
 
